--- a/android-demo/app/src/main/res/values/strings.xml
+++ b/android-demo/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">丁丁直播</string>
+    <string name="app_name">大象直播</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="please_input_phone_num">请填写手机号码</string>
